# tova

./: README.md  pyproject.toml
examples/minimal/: main.py
examples/nostra/: README.md  main.py  nostra_auth.py  nostra_backend.py  nostra_notifier.py  nostra_store.py
tova_core/: __init__.py  app.py  config.py  llm.py
tova_core/agents/: execution_agent.py  order_agent.py
tova_core/models/: schemas.py
tova_core/prompts/: default.py
tova_core/providers/: __init__.py  auth.py  backend.py  notifier.py  store.py
tova_core/tools/: helpers.py  registry.py
