[project]
name = "tova"
version = "0.1.0"
description = "Open-source AI agent framework for healthcare order automation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
anthropic = [
    "langchain-anthropic>=0.3.0",
    "anthropic>=0.42.0",
]
openai = [
    "langchain-openai>=0.3.0",
    "openai>=1.0.0",
]
google = [
    "langchain-google-genai>=2.0.0",
]
# Nostra example uses Firebase/Firestore
firebase = [
    "google-cloud-firestore>=2.19.0",
    "firebase-admin>=6.6.0",
]
all-providers = [
    "tova[anthropic,openai,google]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["tova_core"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
